src/snapshots/gfroerli_bot_threema__handler__tests__resolve_single_sensor__multiple_matches_stats_hint.snap
---
source: src/handler.rs
expression: err
---
Multiple sensors match "Aare":

Aare Bern (#1) – 18.3°C 😌
Aare Thun (#3) – 17.1°C 😨

Please be more specific or use the sensor ID (e.g. /stats 1).
